--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "aframe": "^0.5.0"
   },
   "dependencies": {
-    "aframe-physics-system": "^1.4.0"
+    "aframe-physics-system": "^1.4.0",
+    "expression-eval": "^1.0.1"
   },
   "devDependencies": {
     "aframe": "^0.5.0",
